# blart-py

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Makefile  PYPI_SETUP.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml
examples/: basic_usage.py  fuzzy_matching.py  prefix_queries.py  sct-search.py
python/blart/: __init__.py  __init__.pyi
src/: iterators.rs  lib.rs  treemap.rs
tests/: conftest.py  test_advanced.py  test_errors.py  test_import.py  test_memory.py  test_performance.py  test_prefix.py
